scripts/kubernetes/apps/devops/awx-resources/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: awx
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames: []
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''	
      kind: Service
      name: awx-service
      port: 80
      weight: 1
